Adiciona conexao com banco de dados

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=demo
+
+server.port=8080
+
+# Database configuration
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/padaria
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+# Hibernate configuration
+spring.jpa.show-sql=true
+
+# Faz com que o hibertnate crie as tabelas automaticamente
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
